[tool.poetry]
name = "f3brand_stripe"
version = "0.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^2.30.1"
stripe = "^2.63.0"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2.5"
pytest-timeout = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
